--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -14,23 +14,27 @@
         android:background="@color/white">
 
 
+        <!-- Create label to tell users what txtBudgetAmount is referring to -->
+        <!-- TODO edit text colours -->
         <TextView
             android:id="@+id/txtBudgetLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="48dp"
-            android:text="Budget Remaining"
+            android:text="@string/label_budget_remaining"
             android:textColor="@color/material_dynamic_neutral60"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
+        <!-- Create TextView to display the currently remaining budget -->
         <TextView
             android:id="@+id/txtBudgetAmount"
             android:layout_width="167dp"
             android:layout_height="42dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="24dp"
             android:layout_marginEnd="228dp"
             android:text="£527.01"
             android:textColor="@color/material_dynamic_neutral30"
@@ -38,6 +42,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txtBudgetLabel" />
+
+
+        <!-- TODO put pie chart & categories in a horizontal view -->
+        <!-- Display the pie chart -->
+        <com.github.mikephil.charting.charts.PieChart
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="48dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtBudgetAmount" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
