--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -29,6 +29,7 @@
 
 
         <!-- Create TextView to display the currently remaining budget -->
+
         <TextView
             android:id="@+id/txtBudgetAmount"
             android:layout_width="167dp"
@@ -43,33 +44,52 @@
             app:layout_constraintTop_toBottomOf="@id/txtBudgetLabel" />
 
 
-        <!--        &lt;!&ndash; TODO put pie chart & categories in a horizontal view &ndash;&gt;-->
-        <!--        &lt;!&ndash; Display the pie chart &ndash;&gt;-->
-        <!--        <com.github.mikephil.charting.charts.PieChart-->
-        <!--            android:id="@+id/pieChart"-->
-        <!--            android:layout_width="180dp"-->
-        <!--            android:layout_height="180dp"-->
-        <!--            android:layout_marginStart="24dp"-->
-        <!--            android:layout_marginTop="48dp"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toBottomOf="@+id/txtBudgetAmount" />-->
+        <!-- TODO put pie chart & categories in a horizontal view -->
+        <!-- Display the pie chart -->
+
+
+        <!-- Display the most recent transactions in a RecyclerView -->
+
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/pieChart"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtBudgetAmount">
+
+
+        </com.github.mikephil.charting.charts.PieChart>
+
+        <TextView
+            android:id="@+id/txtRecyclerViewLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/recent_transactions"
+            android:textColor="@color/material_dynamic_neutral60"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pieChart" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="48dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtBudgetAmount"
-            app:layout_constraintVertical_bias="0.0"
-            tools:itemCount="3"
-            tools:listitem="@layout/transaction_item">
+            app:layout_constraintTop_toBottomOf="@+id/txtRecyclerViewLabel"
+            app:layout_constraintVertical_bias="1.0"
+            tools:itemCount="6"
+            tools:listitem="@layout/recycler_view_item">
 
 
         </androidx.recyclerview.widget.RecyclerView>
