--- a/app/src/main/res/layout/transaction_item.xml
+++ b/app/src/main/res/layout/transaction_item.xml
@@ -7,27 +7,47 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="16dp"
-    android:background="@color/budgetBlue"
     >
 
+<!--  Each row is formatted like so  -->
+<!--  category (type)amount datetime -->
+
+    <!-- The category of the transaction -->
     <TextView
         android:id="@+id/textCategory"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textAppearance="?attr/textAppearanceBody1"
-        android:text="Test Category">
-    </TextView>
-
-    <TextView
-        android:id="@+id/textAmount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="1.5"
         android:textAppearance="?attr/textAppearanceBody1"
         android:textStyle="bold"
-        android:textColor="@color/lightRed"
-        android:text="£0.00">
+        android:textColor="@color/black"
+        android:text="Shopping">
     </TextView>
+
+    <!-- The amount of the transaction -->
+    <TextView
+        android:id="@+id/textAmount"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textColor="@color/brightGreen"
+        android:textStyle="bold"
+        android:textAppearance="?attr/textAppearanceBody1"
+        android:text="+/£0.00">
+    </TextView>
+
+    <!-- The date and time of the transaction -->
+    <TextView
+        android:id="@+id/textDateTime"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.5"
+        android:textColor="@color/black"
+        android:textAppearance="?attr/textAppearanceBody1"
+        android:text="12:34 12/3/2000">
+    </TextView>
+
+
+
 
 </LinearLayout>
