--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,8 @@
     <color name="lightYellow">#FFFFE0</color>
     <color name="lightPurple">#E6E6FA</color>
 
+    <!--  Bright Colors  -->
+    <color name="brightGreen">#00FF00</color>
+    <color name="brightRed">#FF0000</color>
+
 </resources>
