Updated transaction item layout

--- a/app/src/main/res/layout/transaction_item.xml
+++ b/app/src/main/res/layout/transaction_item.xml
@@ -13,18 +13,19 @@
 <!--  category (type)amount datetime -->
 
     <!-- The category of the transaction -->
+
     <TextView
         android:id="@+id/textCategory"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1.5"
+        android:layout_weight="1.25"
+        android:text="Entertainment"
         android:textAppearance="?attr/textAppearanceBody1"
-        android:textStyle="bold"
         android:textColor="@color/black"
-        android:text="Shopping">
-    </TextView>
+        android:textStyle="bold"></TextView>
 
     <!-- The amount of the transaction -->
+
     <TextView
         android:id="@+id/textAmount"
         android:layout_width="0dp"
@@ -37,17 +38,15 @@
     </TextView>
 
     <!-- The date and time of the transaction -->
+
     <TextView
         android:id="@+id/textDateTime"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1.5"
-        android:textColor="@color/black"
+        android:text="12:34 12/3/2000"
         android:textAppearance="?attr/textAppearanceBody1"
-        android:text="12:34 12/3/2000">
-    </TextView>
-
-
+        android:textColor="@color/black"></TextView>
 
 
 </LinearLayout>
