--- a/app/src/main/res/layout/editable_transaction_item.xml
+++ b/app/src/main/res/layout/editable_transaction_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="16dp">
 
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="+/£0.00"
+            android:text="@string/placeholder_amount"
             android:textAppearance="?attr/textAppearanceBody1"
             android:textColor="@color/brightGreen"
             android:textStyle="bold">
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1.25"
-            android:text="Entertainment"
+            android:text="@string/placeholder_category"
             android:textAppearance="?attr/textAppearanceBody1"
             android:textColor="@color/black"
             android:textStyle="bold">
@@ -50,9 +50,9 @@
         <TextView
             android:id="@+id/textDateTime"
             android:layout_width="107dp"
-            android:layout_height="44dp"
+            android:layout_height="0dp"
             android:layout_weight="1.5"
-            android:text="12:34 12/3/2000"
+            android:text="@string/placeholder_date"
             android:textAppearance="?attr/textAppearanceBody1"
             android:textColor="@color/black">
 
@@ -66,9 +66,10 @@
         android:padding="16dp">
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/deleteButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/cd_remove_transaction"
             app:srcCompat="@drawable/close_icon" />
     </LinearLayout>
 
