Fixed transaction item layouts

--- a/app/src/main/res/layout/transaction_item.xml
+++ b/app/src/main/res/layout/transaction_item.xml
@@ -14,39 +14,58 @@
 
     <!-- The category of the transaction -->
 
-    <TextView
-        android:id="@+id/textCategory"
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1.25"
-        android:text="Entertainment"
-        android:textAppearance="?attr/textAppearanceBody1"
-        android:textColor="@color/black"
-        android:textStyle="bold"></TextView>
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="+/£0.00"
+            android:textAppearance="?attr/textAppearanceBody1"
+            android:textColor="@color/brightGreen"
+            android:textStyle="bold">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/textCategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Entertainment"
+            android:textAppearance="?attr/textAppearanceBody1"
+            android:textColor="@color/black"
+            android:textStyle="bold">
+
+        </TextView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textDateTime"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:text="12:34 12/3/2000"
+            android:textAppearance="?attr/textAppearanceBody1"
+            android:textColor="@color/black">
+
+        </TextView>
+    </LinearLayout>
 
     <!-- The amount of the transaction -->
 
-    <TextView
-        android:id="@+id/textAmount"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textColor="@color/brightGreen"
-        android:textStyle="bold"
-        android:textAppearance="?attr/textAppearanceBody1"
-        android:text="+/£0.00">
-    </TextView>
-
     <!-- The date and time of the transaction -->
-
-    <TextView
-        android:id="@+id/textDateTime"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1.5"
-        android:text="12:34 12/3/2000"
-        android:textAppearance="?attr/textAppearanceBody1"
-        android:textColor="@color/black"></TextView>
 
 
 </LinearLayout>
