--- a/app/src/main/res/layout/editable_transaction_item.xml
+++ b/app/src/main/res/layout/editable_transaction_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:baselineAligned="false"
     android:orientation="horizontal"
     android:padding="16dp">
 
@@ -11,16 +12,17 @@
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="75dp"
+        android:layout_weight="1.5"
         android:orientation="vertical"
         android:padding="16dp">
 
         <TextView
             android:id="@+id/textAmount"
             android:layout_width="wrap_content"
+            android:layout_gravity="center"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/placeholder_amount"
             android:textAppearance="?attr/textAppearanceBody1"
             android:textColor="@color/brightGreen"
@@ -31,6 +33,7 @@
         <TextView
             android:id="@+id/textCategory"
             android:layout_width="wrap_content"
+            android:layout_gravity="center"
             android:layout_height="wrap_content"
             android:layout_weight="1.25"
             android:text="@string/placeholder_category"
@@ -42,16 +45,17 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="75dp"
+        android:layout_weight="1.25"
         android:orientation="vertical"
         android:padding="16dp">
 
         <TextView
             android:id="@+id/textDateTime"
             android:layout_width="107dp"
-            android:layout_height="0dp"
-            android:layout_weight="1.5"
+            android:layout_gravity="center"
+            android:layout_height="match_parent"
             android:text="@string/placeholder_date"
             android:textAppearance="?attr/textAppearanceBody1"
             android:textColor="@color/black">
@@ -60,8 +64,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="75dp"
+        android:layout_weight="0.5"
         android:orientation="vertical"
         android:padding="16dp">
 
@@ -69,6 +74,8 @@
             android:id="@+id/deleteButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
             android:contentDescription="@string/cd_remove_transaction"
             app:srcCompat="@drawable/close_icon" />
     </LinearLayout>
