--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -46,14 +46,21 @@
 
         <!-- TODO put pie chart & categories in a horizontal view -->
         <!-- Display the pie chart -->
+
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/pieChart"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
+            android:layout_width="175dp"
+            android:layout_height="175dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/txtRecyclerViewLabel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtBudgetAmount">
+
         </com.github.mikephil.charting.charts.PieChart>
 
         <TextView
@@ -85,7 +92,7 @@
             app:layout_constraintTop_toBottomOf="@+id/txtRecyclerViewLabel"
             app:layout_constraintVertical_bias="1.0"
             tools:itemCount="6"
-            tools:listitem="@layout/recycler_view_item">
+            tools:listitem="@layout/transaction_item">
 
 
         </androidx.recyclerview.widget.RecyclerView>
