--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -15,6 +15,29 @@
 
         <!-- Create label to tell users what txtBudgetAmount is referring to -->
         <!-- TODO edit text colours -->
+
+        <LinearLayout
+            android:id="@id/pieChartContainer"
+            android:layout_width="match_parent"
+            android:layout_height="172dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtBudgetAmount">
+
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/pieChart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="start">
+
+            </com.github.mikephil.charting.charts.PieChart>
+        </LinearLayout>
+
         <TextView
             android:id="@+id/txtBudgetLabel"
             android:layout_width="wrap_content"
@@ -47,22 +70,6 @@
         <!-- TODO put pie chart & categories in a horizontal view -->
         <!-- Display the pie chart -->
 
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/pieChart"
-            android:layout_width="175dp"
-            android:layout_height="175dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="24dp"
-            app:layout_constraintBottom_toTopOf="@+id/txtRecyclerViewLabel"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtBudgetAmount">
-
-        </com.github.mikephil.charting.charts.PieChart>
-
         <TextView
             android:id="@+id/txtRecyclerViewLabel"
             android:layout_width="wrap_content"
@@ -73,7 +80,7 @@
             android:textColor="@color/material_dynamic_neutral60"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pieChart" />
+            app:layout_constraintTop_toBottomOf="@+id/pieChartContainer" />
 
 
         <!-- Display the most recent transactions in a RecyclerView -->
