--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -210,7 +210,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:clickable="true"
-        android:contentDescription="Add Transaction"
+        android:contentDescription="@string/add_transaction"
         android:focusable="true"
         android:src="@drawable/add_icon"
         android:tint="@color/white"
