--- a/app/src/main/res/layout/activity_first_startup.xml
+++ b/app/src/main/res/layout/activity_first_startup.xml
@@ -5,11 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <TextView
+        android:id="@+id/txtPoundSign2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:text="@string/pound_sign"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextBudget"
+        app:layout_constraintEnd_toStartOf="@+id/editTextBudget" />
+
     <TextView
         android:id="@+id/welcomeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="256dp"
+        android:layout_marginTop="288dp"
         android:text="@string/welcome_text"
         android:textColor="@color/budgetBlue"
         android:textSize="24sp"
@@ -31,13 +42,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
 
-    <EditText
-        android:layout_width="128dp"
-        android:layout_height="wrap_content"
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/editTextBudget"
+        android:layout_width="132dp"
+        android:layout_height="48dp"
         android:layout_marginTop="24dp"
         android:hint="Set a budget"
+        android:inputType="number"
+        android:singleLine="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+    </com.google.android.material.textfield.TextInputEditText>
+
+    <Button
+        android:id="@+id/startButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="Start"
+        android:onClick="startButtonPressed"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
