--- a/app/src/main/res/layout/editable_transaction_item.xml
+++ b/app/src/main/res/layout/editable_transaction_item.xml
@@ -11,12 +11,13 @@
     <!--  category (type)amount datetime -->
 
 
+    <!-- The amount of the transaction -->
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="75dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1.5"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/textAmount"
@@ -43,16 +44,17 @@
         </TextView>
     </LinearLayout>
 
+    <!-- The date and time of the transaction -->
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="75dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1.25"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:gravity="center">
 
         <TextView
             android:id="@+id/textDateTime"
-            android:layout_width="107dp"
+            android:layout_width="wrap_content"
             android:layout_gravity="center"
             android:layout_height="match_parent"
             android:text="@string/placeholder_date"
@@ -64,24 +66,23 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="75dp"
+        android:layout_height="wrap_content"
         android:layout_weight="0.5"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:gravity="center">
 
         <ImageButton
             android:id="@+id/deleteButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:adjustViewBounds="true"
             android:background="@android:color/transparent"
             android:contentDescription="@string/cd_remove_transaction"
-            app:srcCompat="@drawable/close_icon" />
+            app:srcCompat="@drawable/close_icon"
+            android:scaleType="fitCenter"/>
     </LinearLayout>
 
-    <!-- The amount of the transaction -->
 
-    <!-- The date and time of the transaction -->
 
 
 </LinearLayout>
