--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -21,13 +21,13 @@
             android:layout_width="match_parent"
             android:layout_height="172dp"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txtBudgetRemaining">
+            app:layout_constraintTop_toBottomOf="@+id/txtTotalBudget">
 
             <com.github.mikephil.charting.charts.PieChart
                 android:id="@+id/pieChart"
@@ -37,6 +37,9 @@
 
             </com.github.mikephil.charting.charts.PieChart>
         </LinearLayout>
+
+
+        <!-- TextView to display the currently remaining budget -->
 
         <TextView
             android:id="@+id/txtBudgetLabel"
@@ -50,8 +53,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
-        <!-- TextView to display the currently remaining budget -->
         <TextView
             android:id="@+id/txtBudgetRemaining"
             android:layout_width="167dp"
@@ -115,6 +116,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/txtTotalBudget"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/placeholder_monthly_budget"
+            android:textColor="@color/material_dynamic_neutral60"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtBudgetRemaining" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
